Alteração dos .js e .css

--- a/Antonio/chat/public/Medicina.html
+++ b/Antonio/chat/public/Medicina.html
@@ -8,6 +8,10 @@
     <title>WiseMind-Medicina</title>
     <link rel="stylesheet" href="assets/style.css">
 
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="../node_modules/bootstrap/compiler/bootstrap.css">
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+
 </head>
 
 <body>
@@ -29,15 +33,12 @@
             <button type="submit" id="env">Enviar</button>
         </form>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="js/javinha.js"></script>
+    <script src="../node_modules/popper.js/dist/umd/popper.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
     <script>
         var socket = io(); //conexão
         var sala = 'Medicina' //sala
