troca de pastas

--- a/Antonio/chat/public/Medicina.html
+++ b/Antonio/chat/public/Medicina.html
@@ -35,7 +35,7 @@
     </div>
     
     <script src="../node_modules/jquery/dist/jquery.js"></script>
-    <script src="js/javinha.js"></script>
+    <script src="assets/javinha.js"></script>
     <script src="../node_modules/popper.js/dist/umd/popper.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/socket.io/socket.io.js"></script>
