--- a/Antonio/chat/public/Medicina.html
+++ b/Antonio/chat/public/Medicina.html
@@ -143,6 +143,7 @@
                 renderMessage(messageObject)
 
                 socket.emit('sendMessage', messageObject)
+                var msg = document.getElementById('msg').value = ""
                 document.getElementById('bottom').scrollIntoView(true);
 
 
