--- a/Antonio/chat/public/Medicina.html
+++ b/Antonio/chat/public/Medicina.html
@@ -7,37 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>WiseMind-Medicina</title>
 
-     <!-- Bootstrap CSS -->
-     <link rel="stylesheet" href="../node_modules/bootstrap/compiler/bootstrap.css">
-     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-     <link rel="stylesheet" href="assets/style.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/bootstrap/compiler/bootstrap.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" href="assets/style.css">
 
 </head>
 
-<body>
-    <h1>Medicina</h1>
-    <div id="main-message">
-        <div id="teste">
-            <ol id="messages">
-                <p>sala 1</p>
-            </ol>
+<body style="background-image: url('img/fundo_azul.png')">
+    <section class="container" style="height:60vh; background-color: #2f3136; ">
+        <button class="btn btn-outline-primary">Luan</button>
+        <h1>Medicina</h1>
+        <div id="main-message">
+            <div id="teste">
+                <ol id="messages">
+                    <p>sala 1</p>
+                </ol>
 
-            <div id="bottom"></div>
-            <p id="typingSpace">dfdfdf<p>
+                <div id="bottom"></div>
+                <p id="typingSpace">dfdfdf<p>
+            </div>
+
+            <form id="chat">
+
+                <input type="text" id="user" placeholder="Seu usuario">
+                <input type="text" id="msg" placeholder="digite sua mensagem">
+                <button type="submit" id="env">Enviar</button>
+            </form>
         </div>
+    </section>
 
-        <form id="chat">
-
-            <input type="text" id="user" placeholder="Seu usuario">
-            <input type="text" id="msg" placeholder="digite sua mensagem">
-            <button type="submit" id="env">Enviar</button>
-        </form>
-    </div>
-    
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="/jquery/dist/jquery.js"></script>
     <script src="assets/javinha.js"></script>
-    <script src="../node_modules/popper.js/dist/umd/popper.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/popper.js/dist/umd/popper.js"></script>
+    <script src="/bootstrap/dist/js/bootstrap.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io(); //conexão
